Fix icon not showing issue

--- a/styles.css
+++ b/styles.css
@@ -238,44 +238,44 @@ h5 {
 }
 
 #dashboard {
-    background-image: url(icons/layout.png);
+    background-image: url(./icons/layout.png);
 }
 
 #home {
-    background-image: url(icons/home.png);
+    background-image: url(./icons/home.png);
 
 }
 
 #profile {
-    background-image: url(icons/user.png);
+    background-image: url(./icons/user.png);
 }
 
 #messages {
-    background-image: url(icons/chat.png);
+    background-image: url(./icons/chat.png);
 }
 
 #tasks{
-    background-image: url(icons/to-do-list.png);
+    background-image: url(./icons/to-do-list.png);
 }
 
 #community {
-    background-image: url(icons/community.png);
+    background-image: url(./icons/community.png);
 }
 
 #settings {
-    background-image: url(icons/settings.png);
+    background-image: url(./icons/settings.png);
 }
 
 #support {
-    background-image: url(icons/online-chat.png);
+    background-image: url(./icons/online-chat.png);
 }
 
 #privacy {
-    background-image: url(icons/shield.png);
+    background-image: url(./icons/shield.png);
 }
 
 #alerts {
-    background-image: url(icons/notification.png);
+    background-image: url(./icons/notification.png);
     height: 32px;
     background-position: center;
     background-repeat: no-repeat;
@@ -283,7 +283,7 @@ h5 {
 }
 
 #avatar {
-    background-image: url(icons/kermit.png);
+    background-image: url(./icons/kermit.png);
     height: 50px;
     width: 50px;
     border-radius: 50px;
@@ -306,16 +306,16 @@ h5 {
 }
 
 .card-icon-favourite {
-    background-image: url(icons/star.png);
+    background-image: url(./icons/star.png);
     
 }
 
 .card-icon-view {
-    background-image: url(icons/eye.png);
+    background-image: url(./icons/eye.png);
 }
 
 .card-icon-share {
-    background-image: url(icons/share.png);
+    background-image: url(./icons/share.png);
 }
 
 #news-profile-lego,
@@ -329,13 +329,13 @@ h5 {
 }
 
 #news-profile-lego {
-    background-image: url(icons/lego.jpg);
+    background-image: url(./icons/lego.jpg);
 }
 
 #news-profile-diamonds {
-    background-image: url(icons/diamonds.jpg);
+    background-image: url(./icons/diamonds.jpg);
 }
 
 #news-profile-droplet {
-    background-image: url(icons/droplets.jpg);
+    background-image: url(./icons/droplets.jpg);
 }
